安装 gulp-rename模块

--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -7,3 +7,6 @@
 body,label,.checkbox label{
     font-weight:300;
 }
+
+@imoort "fontawesome/font-awesome";
+@imoort "others/dataTables.bootstrap.less";
